2003-09-17  Mario Lang  <mlang@delysid.org> (tiny change)

	* progmodes/gud.el (perldb): Change gud-print from just "%e" to 
	"p %e" to actually print the value in the GUD buffer.

2003-09-16  Miles Bader  <miles@gnu.ai.mit.edu>

	From David Ponce <david.ponce@wanadoo.fr>:
	* makefile.w32-in (DONTCOMPILE): Add loaddefs-boot.el.
	(bootstrap-clean-CMD, bootstrap-clean-SH): Recreate loaddefs.el
	from loaddefs-boot.el if necessary.

2003-09-15  Zoltan Kemenczy <kemenczy@rogers.com>

	* progmodes/gud.el (gud-find-class): Make jdb work again since
	cc-mode changed the syntactic information.

2003-09-15  David Ponce  <david@dponce.com>

	* recentf.el: (recentf-exclude): Accept predicates too.
	(recentf-file-readable-p): New function.
	(recentf-include-p): Handle predicates in recentf-exclude.
	(recentf-add-file): Doc fix.  Use recentf-file-readable-p.
	(recentf-cleanup): Likewise.
	(recentf-save-list): Use write-file to handle backup of
	recentf-save-file.

2003-09-15  Miles Bader  <miles@gnu.ai.mit.edu>

	* loaddefs-boot.el: Renamed from `loaddefs.el'
	* Makefile.in (DONTCOMPILE): Add loaddefs-boot.el.
	(bootstrap-clean): Recreate loaddefs.el from loaddefs-boot.el if
	necessary.

2003-09-13  Thien-Thi Nguyen  <ttn@gnu.org>

	* electric.el (Electric-pop-up-window): For the `one-window' case,
	no longer disconcertingly move point in the original buffer.

2003-09-13  Kevin Rodgers  <ihs_4664@yahoo.com> (tiny change)

	* hl-line.el: Documentation (comments-only) fix.

2003-09-12  Eric Hanchrow <offby1@blarg.net>  (tiny change)

	* dired.el (dired-mode-map): Fix typo.

2003-09-11  Richard M. Stallman  <rms@gnu.org>

	* dired.el (dired-mode-map): Bind M-g to dired-goto-file.

2003-09-11  Paul Pogonyshev  <pogonyshev@gmx.net>  (tiny change)

	* window.el (kill-buffer-and-window): Remove `yes-or-no-p' so that
	the function is less noisy.  Now only `kill-buffer' can ask
	questions.

2003-09-10  Mario Lang  <mlang@delysid.org>

	* battery.el: Update Commentary and Copyright.